@@ -55,7 +55,7 @@ abstract class TableOperation implements HConstants {
     }
     // add the delimiters.
     // TODO maybe check if this is necessary?
-    this.tableName = Bytes.toBytes(Bytes.toString(tableName) + ",,");
+    this.tableName = tableName;
 
     // Don't wait for META table to come on line if we're enabling it
     if (!Bytes.equals(HConstants.META_TABLE_NAME, this.tableName)) {
@@ -78,8 +78,11 @@ abstract class TableOperation implements HConstants {
       boolean tableExists = false;
 
       // Open a scanner on the meta region
+      byte [] tableNameMetaStart =
+          Bytes.toBytes(Bytes.toString(tableName) + ",,");
+
       long scannerId = server.openScanner(m.getRegionName(),
-          COLUMN_FAMILY_ARRAY, tableName, HConstants.LATEST_TIMESTAMP, null);
+          COLUMN_FAMILY_ARRAY, tableNameMetaStart, HConstants.LATEST_TIMESTAMP, null);
 
       List<byte []> emptyRows = new ArrayList<byte []>();
       try {
